test/ll_parser_standard_test.test
BRACKETED EXPRESSION:
    ID 10 is {|{|x|} + {|y|}|}
BRACKETED EXPRESSION:
    ID 11 is {|x + y|}
ERROR: in line ##: not a legal value element `*':
        z = x * y
              ^
ERROR: in line ##: after `=' attribute value (label or single bracketed
       subexpression) was expected but none found; line ignored:
        z = x * y
          ^
ERROR: in line ##: not a legal value element `-':
        w = u - v
              ^
ERROR: in line ##: after `=' attribute value (label or single bracketed
       subexpression) was expected but none found; line ignored:
        w = u - v
          ^
BRACKETED EXPRESSION:
    ID 20 is {"": b = [< c "/" d >]|{|x|} + {|y|}|}
BRACKETED EXPRESSION:
    ID 21 is {|{|x|} * {|y|}|}
BRACKETED EXPRESSION:
    ID 22 is {|{|u|} - {|v|}|}
BRACKETED EXPRESSION:
    ID 23 is
        {"": z = {|{|x|} * {|y|}|}, w = {|{|u|} - {|v|}|}|{|x|} +
             {|y|}|}
BRACKETED EXPRESSION:
    ID 30 is
        {|this is an indented paragraph
          {"": .terminator = [$ INDENTED_PARAGRAPH $], .initiator =
               "::"|{p|{s|with a line and a second line|s}|p}|}|}
BRACKETED EXPRESSION:
    ID 35 is foo
BRACKETED EXPRESSION:
    ID 36 is "fum"
BRACKETED EXPRESSION:
    ID 40 is
        {|{|This is a code line ending in|}
          {"": .terminator = [$ INDENTED_PARAGRAPH $], .initiator = ":"|
               {"": .terminator = "<LF>", .initiator =
                    [$ LOGICAL_LINE $]|An indented paragragraph ";" line
                    one "."|}
               {"": .terminator = "<LF>", .initiator =
                    [$ LOGICAL_LINE $]|Line two "."|}|}|}
ERROR: in line ##: not a legal label initial element `98.21':
           d = "ppp", e = "ppp" "qqq", 98.21 = hi, "," = ":",
                                       ^^^^^
WARNING: in line ##: separator should be quoted:
           f = ;, . = 99, g = [< m n >] p, h = [< [< m n >] p >]
                  ^
ERROR: in line ##: not a legal value element `m n':
           f = ;, . = 99, g = [< m n >] p, h = [< [< m n >] p >]
                              ^^^^^^^^^
ERROR: in line ##: bad attribute label; attribute ignored:
           d = "ppp", e = "ppp" "qqq", 98.21 = hi, "," = ":",
                                       ^^^^^
ERROR: in line ##: bad attribute value; attribute ignored:
           f = ;, . = 99, g = [< m n >] p, h = [< [< m n >] p >]
                              ^^^^^^^^^^^
BRACKETED EXPRESSION:
    ID 50 is
        {x: h = [< [< m n >] p >], "," = ":", d = ppp, e =
            [< ppp qqq >], a = "quoted string", "." = 99, f = ";", b =
            53.91, c = [< yyy 53.91 >]|"quoted string" 53.91 99 ";"
            foo|x}
BRACKETED EXPRESSION:
    ID 60 is {"": a = @@ = b, d = @@ = c}
!@@ :=:
           .position[H] = PACKED_VEC
           b = @@ = a
           c = @@ = d
!@@ :=:
           a = @@ = b
           .position[H] = PACKED_VEC
           d = @@ = c
BRACKETED EXPRESSION:
    ID 61 is {"": a = @@ = b}
BRACKETED EXPRESSION:
    ID 70 is {"": e 22.99 = 5, a = [< b 55.44 >], c = @@ = d 77.33}
ERROR: in line ##: not a legal label initial element `2':
    2 = X
    ^
ERROR: in line ##: line does not begin with a (possibly negated)
       attribute label; line ignored:
    2 = X
    ^^^^^
ERROR: in line ##: not a legal label initial element `6':
    6 = Z
    ^
ERROR: in line ##: line does not begin with a (possibly negated)
       attribute label; line ignored:
    6 = Z
    ^^^^^
ERROR: in line ##: not a legal label initial element `7.1':
    7.1 = Q
    ^^^
ERROR: in line ##: line does not begin with a (possibly negated)
       attribute label; line ignored:
    7.1 = Q
    ^^^^^^^
ERROR: in line ##: not a legal label initial element `1':
    K = @@@ = 1 L
              ^
ERROR: in line ##: reverse attribute label after second `=' was expected
       but not found; line ignored:
    K = @@@ = 1 L
            ^
!@@ :=:
           .position[H] = PACKED_VEC
           d 77.33 = @@ = c
!@@ :=:
           .position[H] = PACKED_VEC
           J = @@ = H
           e 22.99 = 5
           a = [< b 55.44 >]
           c = @@ = d 77.33
!@@ := A B C D E:
           F = [< 1 2 3 >]
           G = [< M N P >]
           H = @@ = J
           8.4.5 = P
           "4" = Y
           .position[H] = PACKED_VEC
BRACKETED EXPRESSION:
    ID 80 is
        {"": F = [< 1 2 3 >], G = [< M N P >], H = @@ = J, 8.4.5 = P,
             "4" = Y|A B C D E|}
BRACKETED EXPRESSION:
    ID X is {"": name = X, next = @@ = previous, previous = @@ = next}
!@@ :=:
           previous = @@ = next
           .position[H] = PACKED_VEC
           name = Y
           next = @@ = previous
!@@ :=:
           name = X
           next = @@ = previous
           previous = @@ = next
           .position[H] = PACKED_VEC
BRACKETED EXPRESSION:
    ID Y is {"": previous = @@ = next, name = Y, next = @@ = previous}
ERROR: in line ###: ID references an object that already has
       single-attribute-values or attribute-flags, other than for
       .position; definition ignored:
@<X> := hi there @<Z>
^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    ID X is {|hi there ({|m|} + {|n|})|}
BRACKETED EXPRESSION:
    ID Y is ({|m|} + {|n|})
BRACKETED EXPRESSION:
    ID Z is PREALLOCATED(1*0)
BRACKETED EXPRESSION:
    {quote|{s|This is a line with an indented paragraph
              {"": .terminator = [$ INDENTED_PARAGRAPH $], .initiator =
                   ":"|
                   {p|{s: .terminator = "."|First line of indented
                          paragraph|s}
                      {s: .terminator = "."|Second line of indented
                          paragraph|s}|p}|}|s}|quote}
!@@ := @@:
           .type = quote
           .position[H] = PACKED_VEC
!@@ := This is a line with an indented paragraph @@@:
           .position[H] = PACKED_VEC
           .type = s
!@@@ := @@@:
            .terminator = [$ INDENTED_PARAGRAPH $]
            .position[H] = PACKED_VEC
            .initiator = ":"
!@@@ := @@@ @@@:
            .position[H] = PACKED_VEC
            .type = p
!@@@ := First line of indented paragraph:
            .terminator = "."
            .position[H] = PACKED_VEC
            .type = s
!@@@ := Second line of indented paragraph:
            .terminator = "."
            .position[H] = PACKED_VEC
            .type = s
    lines ###-###:
{quote}
^^^^^^^
This is a line with an indented paragraph: // A comment
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    First line of indented paragraph.
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    Second line of indented paragraph.
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    {|x|} + {|y|}
!@@@ := @@@ "+" @@@:
            .terminator = "<LF>"
            .initiator = [$ LOGICAL_LINE $]
            .position[H] = PACKED_VEC
!@@@ := x:
            .position[H] = PACKED_VEC
!@@@ := y:
            .position[H] = PACKED_VEC
    line ###:
x + y
^^^^^
BRACKETED EXPRESSION:
    COOKED ID 90 is (A B C)
!@@@ := COOKED ID 90 is @@@:
            .terminator = "<LF>"
            .position[H] = PACKED_VEC
            .initiator = [$ LOGICAL_LINE $]
!@@@ := A B C:
            .terminator = ")"
            .initiator = "("
            .position[H] = PACKED_VEC
    line ###:
COOKED ID 90 is @@@
^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    COOKED ID 91 is ({|A|}, {|B|}, {|C|})
!@@@ := COOKED ID 91 is @@@:
            .terminator = "<LF>"
            .position[H] = PACKED_VEC
            .initiator = [$ LOGICAL_LINE $]
!@@@ := @@@ @@@ @@@:
            .terminator = ")"
            .initiator = "("
            .separator = ","
            .position[H] = PACKED_VEC
!@@@ := A:
            .position[H] = PACKED_VEC
!@@@ := B:
            .position[H] = PACKED_VEC
!@@@ := C:
            .position[H] = PACKED_VEC
    line ###:
COOKED ID 91 is @@@
^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    COOKED ID 92 is [{|A|}, {|B|}, {|C|}]
!@@@ := COOKED ID 92 is @@@:
            .terminator = "<LF>"
            .position[H] = PACKED_VEC
            .initiator = [$ LOGICAL_LINE $]
!@@@ := @@@ @@@ @@@:
            .terminator = "]"
            .initiator = "["
            .separator = ","
            .position[H] = PACKED_VEC
!@@@ := A:
            .position[H] = PACKED_VEC
!@@@ := B:
            .position[H] = PACKED_VEC
!@@@ := C:
            .position[H] = PACKED_VEC
    line ###:
COOKED ID 92 is @@@
^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    RAW ID 94 is PREALLOCATED(1*94)
!@@@ := RAW ID 94 is PREALLOCATED(1*94):
            .terminator = "<LF>"
            .position[H] = PACKED_VEC
            .initiator = [$ LOGICAL_LINE $]
    line ###:
RAW ID 94 is @@@
^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    RAW ID 94 is [A "," B "," C]
!@@@ := RAW ID 94 is @@@:
            .terminator = "<LF>"
            .position[H] = PACKED_VEC
            .initiator = [$ LOGICAL_LINE $]
!@@@ := A "," B "," C:
            .terminator = "]"
            .initiator = "["
            .position[H] = PACKED_VEC
    line ###:
RAW ID 94 is @@@
^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    ID 100 is {x: u = [< foo "+" fee >]|1 2 3|x}
!@@@ := ID 100 is @@@:
            .terminator = "<LF>"
            .position[H] = PACKED_VEC
            .initiator = [$ LOGICAL_LINE $]
!@@@ := 1 2 3:
            .type = x
            u = [< foo "+" fee >]
            .position[H] = PACKED_VEC
    line ###:
ID 100 is @@@@
^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    ID 101 is {x: u = {|foo "+" fee|}|1 2 3|x}
!@@@ := ID 101 is @@@:
            .terminator = "<LF>"
            .position[H] = PACKED_VEC
            .initiator = [$ LOGICAL_LINE $]
!@@@ := 1 2 3:
            .type = x
            u = @@@
            .position[H] = PACKED_VEC
!@@@ := foo @@@ fee:
            .position[H] = PACKED_VEC
!@@@ := "+":
            .type = "<Q>"
    line ###:
ID 101 is @@@@
^^^^^^^^^^^^^^
WARNING: in line ###: mark should be quoted:
@@@@ := {x: u = foo + fee|1 2 3|}
                    ^
BRACKETED EXPRESSION:
    ID 102 is {x: u = [< foo "+" fee >]|1 2 3|x}
!@@@ := ID 102 is @@@:
            .terminator = "<LF>"
            .position[H] = PACKED_VEC
            .initiator = [$ LOGICAL_LINE $]
!@@@ := 1 2 3:
            .type = x
            u = [< foo "+" fee >]
            .position[H] = PACKED_VEC
    line ###:
ID 102 is @@@@
^^^^^^^^^^^^^^
ERROR: in line ###: not a legal value element `+':
    y = foo + fee
            ^
ERROR: in line ###: after `=' attribute value (label or single bracketed
       subexpression) was expected but none found; line ignored:
    y = foo + fee
      ^
BRACKETED EXPRESSION:
    ID 110 is {"": x = [< foo "+" fee >], z = {|foo "+" fee|}|1 2 3|}
!@@@ := ID 110 is @@@:
            .terminator = "<LF>"
            .position[H] = PACKED_VEC
            .initiator = [$ LOGICAL_LINE $]
!@@@ := 1 2 3:
            x = [< foo "+" fee >]
            z = @@@
            .position[H] = PACKED_VEC
!@@@ := foo @@@ fee:
            .position[H] = PACKED_VEC
!@@@ := "+":
            .type = "<Q>"
    line ###:
ID 110 is @@@@
^^^^^^^^^^^^^^
ERROR: in line ###: not a legal label initial element `8':
    8 = hi
    ^
ERROR: in line ###: line does not begin with a (possibly negated)
       attribute label; line ignored:
    8 = hi
    ^^^^^^
ERROR: in line ###: not a legal label initial element `9':
    9 b = ho
    ^
ERROR: in line ###: line does not begin with a (possibly negated)
       attribute label; line ignored:
    9 b = ho
    ^^^^^^^^
ERROR: in line ###: not a legal label initial element `5.4':
    5.4 c = he
    ^^^
ERROR: in line ###: line does not begin with a (possibly negated)
       attribute label; line ignored:
    5.4 c = he
    ^^^^^^^^^^
ERROR: in line ###: not a legal label element `nan':
    x nan = hmm
      ^^^
ERROR: in line ###: line does not begin with a (possibly negated)
       attribute label; line ignored:
    x nan = hmm
    ^^^^^^^^^^^
ERROR: in line ###: not a legal value element `nan':
    z = Q nan
          ^^^
ERROR: in line ###: after `=' attribute value (label or single bracketed
       subexpression) was expected but none found; line ignored:
    z = Q nan
      ^
ERROR: in line ###: not a legal value element `++':
    q = M ++
          ^^
ERROR: in line ###: after `=' attribute value (label or single bracketed
       subexpression) was expected but none found; line ignored:
    q = M ++
      ^
BRACKETED EXPRESSION:
    ID 120 is
        {"": j = -5.4, k = "-5.4", 5d = ha, s = {* x, x *}, t = ",", u =
             ",", w = "++", y = nan, 6e = "ha"|A B C D E|}
!@@@ := ID 120 is @@@:
            .terminator = "<LF>"
            .position[H] = PACKED_VEC
            .initiator = [$ LOGICAL_LINE $]
!@@@ := A B C D E:
            j = -5.4
            k = @@@
            .position[H] = PACKED_VEC
            5d = ha
            s = {* x, x *}
            t = @@@
            u = ","
            w = "++"
            y = nan
            6e = @@@
!@@@ := -5.4:
            .type = "<Q>"
!@@@ := ",":
            .type = "<Q>"
!@@@ := ha:
            .type = "<Q>"
    line ###:
ID 120 is @@@@
^^^^^^^^^^^^^^
WARNING: in line ###: mark should be quoted:
        t = +, u = "+", q = M ++,
                              ^^
BRACKETED EXPRESSION:
    {data|{|PREALLOCATED(1*121)|} =
          {T: p = {* "/", "hi there", "+" *}, t = "+", x = [< z z >],
              q = [< M "++" >], u = "+", y = z, z = z, s = {* x, x *}}|data}
!@@@ := @@@ "=" @@@:
            .position[H] = PACKED_VEC
            .type = data
!@@@ := PREALLOCATED(1*121):
            .position[H] = PACKED_VEC
!@@@ :=:
            p = {* "/", "hi there", "+" *}
            t = "+"
            x = [< z z >]
            .type = T
            q = [< M "++" >]
            u = "+"
            y = z
            z = z
            s = {* x, x *}
            .position[H] = PACKED_VEC
    lines ###-###:
@@@@ = {"T": y = "z", z = z, x = "z" z, s = {* x, "x" *},
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
        t = +, u = "+", q = M ++,
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
        p = {* "hi there", "+", / *} ||}
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
BRACKETED EXPRESSION:
    ID 121 is PREALLOCATED(2*121)
!@@@ := ID 121 is PREALLOCATED(2*121):
            .terminator = "<LF>"
            .position[H] = PACKED_VEC
            .initiator = [$ LOGICAL_LINE $]
    line ###:
ID 121 is @@@@
^^^^^^^^^^^^^^
